Support case when a Google calendar and tasklist having the same name

...which is not supported by Akonadi.

We use calendar/tasklist UID instead of the title as collection name.
User-facing name is stored in DisplayAttribute, so the UID should
not leak to users anywhere.

BUG: 325778
FIXED-IN: 4.11.3